/*
 * Room はルームに関する情報を操作します。
 */
syntax = "proto3";

option go_package = "github.com/SpiralMindJP/at-sdk/go/pb/core";

package at.core;

import "common/common.proto";
import "google/protobuf/empty.proto";

/*
 * ルームリスト取得クエストを表します。
 */
message GetRoomsRequest {
  int64 team_id = 1; // チームID。

  bool with_devices = 11; // true を指定すると、ルームに入室しているデバイスのリストも取得。
}

/*
 * ルームリスト取得レスポンスを表します。
 */
message GetRoomsResponse {
  repeated at.common.Room rooms = 1; // ルーム情報のリスト。
}

/*
 * ルーム取得リクエストを表します。
 */
message GetRoomRequest {
  int64 team_id = 1; // チームID。
  int64 room_id = 2; // ルームID。

  bool with_devices = 11; // true を指定すると、ルームに入室しているデバイスのリストも取得。
}

/*
 * ルーム取得レスポンスを表します。
 */
message GetRoomResponse {
  at.common.Room room = 1; // ルーム情報。
}

/*
 * ルーム作成リクエストを表します。
 */
message CreateRoomRequest {
  int64  team_id = 1; // チームID。
  string name    = 2; // ルーム名。
}

/*
 * ルーム作成レスポンスを表します。
 */
message CreateRoomResponse {
  at.common.Room room = 1; // ルーム情報。
}

/*
 * ルーム更新リクエストを表します。
 */
message UpdateRoomRequest {
  int64  team_id = 1; // チームID。
  int64  room_id = 2; // ルームID。
  string name    = 3; // ルーム名。
}

/*
 * ルーム更新レスポンスを表します。
 */
message UpdateRoomResponse {
  at.common.Room room = 1; // ルーム情報。
}

/*
 * ルームへのカスタマーデバイス入室リクエストを表します。
 */
message JoinCustomerDeviceRequest {
  int64 team_id   = 1; // チームID。
  int64 room_id   = 2; // ルームID。
  int64 device_id = 3; // デバイスID。

  bool force = 11; // true の場合は入室済のカスタマーデバイスを強制的に退室させ、入室を行います。
}

/*
 * ルームへのカスタマーデバイス入室レスポンスを表します。
 */
message JoinCustomerDeviceResponse {
  at.common.Room room = 1; // ルーム情報。
}

/*
 * ルームからのカスタマーデバイス退室リクエストを表します。
 */
message LeaveCustomerDeviceRequest {
  int64 team_id   = 1; // チームID。
  int64 room_id   = 2; // ルームID。
}

/*
 * ルームからのカスタマーデバイス退室レスポンスを表します。
 */
message LeaveCustomerDeviceResponse {
  at.common.Room room = 1; // ルーム情報。
}

/*
 * ルーム削除リクエストを表します。
 */
message DeleteRoomRequest {
  int64 team_id = 1; // チームID。
  int64 room_id = 2; // ルームID。
}

/*
 * ルームを操作するAPIを提供します。
 */
service RoomService {
  // ルームのリストを取得します。
  // 取得するルームのチームIDを指定した GetRoomsRequest を渡します。
  // 指定されたチームIDのルーム情報のリストが設定された GetRoomsResponse が返ります。
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse);

  // ルームを取得します。
  // 取得するルームのチームIDおよびルームIDを指定した GetRoomRequest を渡します。
  // ルームが存在する場合、ルーム情報が設定された GetRoomResponse が返ります。
  rpc GetRoom(GetRoomRequest) returns (GetRoomResponse);

  // 新しくルームを作成します。
  // ルーム名とチームIDを指定した CreateRoomRequest を渡します。
  // ルームの作成に成功すると、作成されたルーム情報が設定された CreateRoomResponse が返ります。
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);

  // ルームを更新します。
  // 更新するルームのルームIDと、新しいルーム名を指定した UpdateRoomRequest を渡します。
  // ルームの更新に成功すると、更新されたルーム情報が設定された UpdateRoomResponse が返ります。
  rpc UpdateRoom(UpdateRoomRequest) returns (UpdateRoomResponse);

  // ルームへのカスタマーデバイスの入室を行います。
  // 入室先のルームのルームIDと、入室を行うカスタマーデバイスのデバイスIDを指定した JoinCustomerDeviceRequest を渡します。
  // 入室先のルームに既にカスタマーデバイスが入室済の場合は、入室を行いません。
  // ただし、force に true をした場合は入室済のカスタマーデバイスを強制的に退室させ、入室を行います。
  // カスタマーデバイスの入室に成功すると、入室したルームのルーム情報を設定した JoinCustomerDeviceResponse が返ります。
  rpc JoinCustomerDevice(JoinCustomerDeviceRequest) returns (JoinCustomerDeviceResponse);
  // ルームからのカスタマーデバイスの退室を行います。
  // カスタマーデバイスを退室させるルームのルームIDを指定した LeaveCustomerDeviceRequest を渡します。
  // カスタマーデバイスの退室に成功すると、退室したルームのルーム情報を設定した LeaveCustomerDeviceResponse が返ります。
  rpc LeaveCustomerDevice(LeaveCustomerDeviceRequest) returns (LeaveCustomerDeviceResponse);

  // ルームを削除します。
  // 削除するルームのルームIDを指定した DeleteRoomRequest を渡します。
  rpc DeleteRoom(DeleteRoomRequest) returns (google.protobuf.Empty);
}
